# shorten-url-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20260205120842_init.down.sql  20260205120842_init.up.sql
src/: main.rs  navigator.rs  setup.rs  shortener.rs  utils.rs
