[package]
name = "shorten-url-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
millisecond = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
